@@ -29,6 +29,7 @@ dependencies {
     testImplementation 'org.spockframework:spock-spring:2.4-M5-groovy-4.0'
     testImplementation("org.apache.groovy:groovy-json:4.0.26")
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.mockito:mockito-core:5.17.0'
 }
 
 tasks.named('test') {
@@ -36,6 +37,7 @@ tasks.named('test') {
 }
 
 test {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     finalizedBy jacocoTestReport
 }
 
